--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "vite-test",
   "version": "1.0.0",
-  "description": "",
-  "main": "main.js",
+  "description": "Testprojekt mit Vite zum Bündeln von JS-Dateien",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "repository": {
     "type": "git",
